add socialHandles api
